<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        style="@style/ActivityHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_newgroup"
        android:theme="@style/ActivityHeader" />

    <TextView
        style="@style/ActivitySubheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_newgroup" />

    <TextView style="@style/HorizontalDivider" />

    <TextView
        style="@style/HelperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="30dp"
        android:text="@string/institution_name" />

    <EditText
        android:id="@+id/input_creategroup_name"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        style="@style/HelperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="30dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/input_creategroup_email"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button_creategroup_create"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/button_create" />

</LinearLayout>