<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/ActivityHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_admin_login"
        android:theme="@style/ActivityHeader" />

    <TextView style="@style/HorizontalDivider" />

    <TextView
        style="@style/HelperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="30dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/input_adminlogin_email"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/HelperText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="30dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/input_adminlogin_password"
        style="@style/TextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/alt_invalid_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/message_invalid_credentials"
        android:textColor="@color/colorAlertText"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_adminlogin_login"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/button_login" />

    <TextView
        android:id="@+id/button_adminlogin_forgot"
        style="@style/ActivitySubheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Forgot Password?" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_goto_newgroup"
            style="@style/SecondaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:text="@string/button_newgroup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </android.support.constraint.ConstraintLayout>

</LinearLayout>