<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userReportLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/title_new_report"
        style="@style/ActivityHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_createreport" />

    <TextView
        android:id="@+id/subtitle_new_report"
        style="@style/ActivitySubheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_createreport" />

    <TextView
        android:id="@+id/label_HorizontalDivider4"
        style="@style/HorizontalDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_threat_slider"
                style="@style/StandardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/question_threat_slider" />

            <SeekBar
                android:id="@+id/input_threat_slider"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:max="4"
                android:progress="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_zero_threat"
                    style="@style/HelperText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/zero_threat" />

                <TextView
                    android:id="@+id/text_view4"
                    style="@style/HelperText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/in_danger" />

            </LinearLayout>

            <TextView
                android:id="@+id/label_incident_date"
                style="@style/StandardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/question_incident_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input_incident_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="date"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_text4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="time"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/label_incident_location"
                style="@style/StandardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/question_incident_location" />

            <EditText
                android:id="@+id/input_incident_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/label_incident_description"
                style="@style/StandardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/question_incident_description" />

            <EditText
                android:id="@+id/input_incident_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="4" />

            <TextView
                android:id="@+id/label_incident_cause"
                style="@style/StandardText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/question_incident_cause" />

            <EditText
                android:id="@+id/input_incident_cause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_category_select_continue"
                    style="@style/SecondaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/select_categories" />

                <Button
                    android:id="@+id/button_attach_media"
                    style="@style/SecondaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/button_media" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvItemSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/button_send_report"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/button_submitreport"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
