<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/title_category_select"
        style="@style/ActivityHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_createreport"
        android:theme="@style/ActivityHeader" />

    <TextView
        android:id="@+id/subtitle_category_select"
        style="@style/ActivitySubheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_categoryselect" />

    <TextView
        android:id="@+id/label_HorizontalDivider3"
        style="@style/HorizontalDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:padding="2dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button10"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#BBDDFF"
                android:text="Button" />

            <Button
                android:id="@+id/button11"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="Button" />

            <Button
                android:id="@+id/button8"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#BBDDFF"
                android:text="Button" />

            <Button
                android:id="@+id/button9"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="Button" />

            <Button
                android:id="@+id/button6"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#BBDDFF"
                android:text="Button" />

            <Button
                android:id="@+id/button7"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="Button" />

            <Button
                android:id="@+id/button4"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#BBDDFF"
                android:text="Button" />

            <Button
                android:id="@+id/button5"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="Button" />

            <Button
                android:id="@+id/button"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#BBDDFF"
                android:text="Button" />

            <Button
                android:id="@+id/button3"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:text="Button" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_category_select_continue"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_continue" />

</LinearLayout>
